--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: $card-width;
+    width: #{$card-width};
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
