I used variable in 'width' in previousversion

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -13,15 +13,15 @@
     border-radius: 5px;
   }
 
-  @media (min-width:488px) {
+  @media (min-width:$small) {
     grid-template-columns: repeat(2, $card-width);
   }
 
-  @media (min-width:768px) {
+  @media (min-width:$medium) {
     grid-template-columns: repeat(3, $card-width);
   }
 
-  @media (min-width:1024px) {
+  @media (min-width:$large) {
     grid-template-columns: repeat(4, $card-width);
   }
 }
